# XiRang

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: plot_results.py  run_baseline.py  run_xirang.py
benchmarks/workloads/: branch_reasoning.jsonl  long_tool_call.jsonl  multi_turn_code_agent.jsonl
configs/: openclaw-vllm-baseline.json5  openclaw-vllm-xirang.json5
deploy/openclaw/: Dockerfile  README.md  docker-compose.yml  openclaw.container.json5  openclaw.tap.host.json5  openclaw.tap.json5
deploy/vllm/: README.md  build_vllm.sh  start_vllm.sh
diag/: analyze.py  experiment.py  experiment_openclaw.py  tap.py
diag/captures/: real_system_template.txt
docs/: benchmark.md  deployment-openeuler.md  design.md  prefix-cache-analysis.md  赛题要求.md
scripts/: build_vllm.sh  configure_openclaw.sh  run_all.sh  setup_third_party.sh  start_vllm.sh  start_xirang.sh
tests/: test_budget.py  test_lifecycle.py  test_rewriter.py
xirang/: __init__.py  config.py
xirang/memory/: budget.py  compression.py  lifecycle.py  segment.py
xirang/metrics/: gpu_monitor.py  latency.py  logger.py
xirang/proxy/: openai_adapter.py  request_rewriter.py  server.py
xirang/tools/: lazy_loader.py  tool_store.py
