[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xirang"
version = "0.1.0"
description = "显存感知的 Agent 内存管理中间层 (proxy between agent framework and vLLM)"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pynvml>=11.5",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
test = ["pytest>=7.4"]
dev = ["matplotlib>=3.7", "pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["xirang*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
